--- a/index.html
+++ b/index.html
@@ -3,16 +3,20 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>AI Tools Leaderboard – Brian Tsai</title>
+  <title>AI Tools Leaderboard – Created for Brian T.</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <div class="header">
     <div>
-      <h1>AI Tools Leaderboard – Brian Tsai Consulting</h1>
-      <div class="small">Portrait layout · Ready to print to 1 page</div>
+      <h1>AI Tools Leaderboard – Created for Brian T.</h1>
+      <div class="small">Portrait layout · Print to one page</div>
       <div class="small">Last updated: <span id="ts"></span></div>
       <ul id="criteria" class="crit"></ul>
+      <div class="news">
+        <h3>Top 5 AI News</h3>
+        <ul id="news"></ul>
+      </div>
     </div>
     <div>
       <span class="badge">LLM</span>
@@ -25,17 +29,24 @@
 
   <div id="content"></div>
 
-  <div class="footer">AI Ecosystem Report – Brian Tsai Consulting © 2025</div>
+  <div class="footer">© 2025 Created for Brian T.</div>
 
   <script>
   async function main(){
-    const res = await fetch('leaderboard.json?_=1760558303');
+    const res = await fetch('leaderboard.json?_=' + Date.now());
     const data = await res.json();
     document.getElementById('ts').textContent = data.timestamp;
-    const crit = document.getElementById('criteria');
+    const critRoot = document.getElementById('criteria');
     data.criteria.forEach(c => {
-      const li = document.createElement('li'); li.textContent = c; crit.appendChild(li);
+      const li = document.createElement('li'); li.textContent = c; critRoot.appendChild(li);
     });
+    const newsRoot = document.getElementById('news');
+    data.news.forEach(n => {
+      const li = document.createElement('li');
+      li.innerHTML = `<strong>${n.title}</strong> — <em>${n.date}</em>: ${n.summary} <a href="${n.url}" target="_blank" rel="noopener">Source</a>`;
+      newsRoot.appendChild(li);
+    });
+
     const root = document.getElementById('content');
     data.categories.forEach(cat => {
       const section = document.createElement('div'); section.className='section';
